--- a/styles/match.css
+++ b/styles/match.css
@@ -137,6 +137,10 @@ body{
     padding-top: 120px;
     color: white;
     font-size: 43px;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Rubik Moonrocks', cursive;
     
 }
 .border{
